Simplify validation worker scheduling